# notebooklm-rust-mcp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/01-research-deep-dive-improvements/: 01-CONTEXT.md  (+1 more)
.repo-memory/: ai-context.xml
.tours/: architecture-walkthrough.tour
docs/: _index.md  openapi.yaml
docs/en/: 00-overview.md  01-architecture.md  02-api-reference.md  03-data-models.md  04-setup.md  05-user-guide.md  06-changelog.md  07-security-posture.md  _index.md
docs/es/: 00-overview.md  01-architecture.md  02-api-reference.md  03-data-models.md  04-setup.md  05-user-guide.md  06-changelog.md  07-security-posture.md  README.md  _index.md
docs/notebooklm-mcp/: 00-overview.md  01-architecture.md  03-data-models.md  04-setup.md  05-user-guide.md  06-changelog.md  README.md  _index.md
docs/pt/: 00-overview.md  01-architecture.md  02-api-reference.md  03-data-models.md  04-setup.md  05-user-guide.md  06-changelog.md  07-security-posture.md  README.md  _index.md
openspec/: config.yaml
openspec/changes/: tasks.md  verify-report.md
src/: artifact_poller.rs  auth_browser.rs  auth_helper.rs  browser_headers.rs  conversation_cache.rs  errors.rs  main.rs  notebooklm_client.rs  parser.rs  research_poller.rs  source_poller.rs  update_checker.rs
src/rpc/: artifacts.rs  mod.rs  notebooks.rs  notes.rs  sources.rs
tests/: integration.rs
tests/fixtures/: add_source_response.json  ask_question_response.txt  list_notebooks_response.json  source_ready_response.json
(+55 files in other folders)
